# PythonProjects

./: .replit  README.md  pyproject.toml
DataAnalysis/TestTasks/Yandex/: readme.md  test_task.ipynb  ya.ipynb
PythonProjects/DataAnalysis/TestTasks/Yandex/: ya.ipynb
TotalizatorWebScraping/: TotalizatorTestWebScraping.ipynb  bets_parser.py  bets_utils.py  detail_bets_html.txt  disign_things.txt  ligastavokscraper.py  mylistener.py  probe.py  settings.py  total_web_scraping.py
TotalizatorWebScraping/Probe/: probe.py  some_probe.py  temp.py
TotalizatorWebScraping/core/: dispatcher.py  parser.py
TotalizatorWebScraping/pages/: ligastavok_live.html  ligastavok_live_data.html  ligastavok_live_data2.html  ligastavok_live_data3.html  ligastavok_live_data_end.html
TotalizatorWebScraping/sites/ligastavok/: bot.py  data.py
