[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["PAVEL ROSTOV <mr.deff@gmail.com>"]
description = ""
name = "pythonprojects"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
lxml = "^4.5"
pandas = "^1.0"
python = "^3.7"
selenium = "^3.141"
[tool.poetry.dev-dependencies]
